Cheaper explicit boxing: new Integer -> Integer.valueOf and new Character -> Character.valueOf